--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,16 @@
 <resources>
     <string name="app_name">WorksWhale</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="empty_name_error">이름을 입력하세요.</string>
+    <string name="empty_phone_number_error">전화번호를 입력하세요.</string>
+    <string name="empty_email_error">이메일을 입력하세요.</string>
+    <string name="invalid_phone_number_error">전화번호는 010으로 시작해야합니다.</string>
+    <string name="invalid_email_error">올바른 이메일 형식이 아닙니다.(xxxxx@xxx.xxx)</string>
+
+    <string name="human_resources_department">인사부</string>
+    <string name="public_relations_department">홍보부</string>
+    <string name="research_development_department">연구개발부</string>
+    <string name="planning_department">기획부</string>
+    <string name="accounting_department">회계부</string>
+    <string name="sales_department">영업부</string>
 </resources>
