Add : contactListLayout, RecyclerView 레이아웃 배경색 흰색 적용, 타이틀 목록에 갯수 연동

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="planning_department">기획부</string>
     <string name="accounting_department">회계부</string>
     <string name="sales_department">영업부</string>
+
+    <string name="department_count">(%d)</string>
 </resources>
