--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="empty_email_error">이메일을 입력하세요.</string>
     <string name="invalid_phone_number_error">전화번호는 010으로 시작해야합니다.</string>
     <string name="invalid_email_error">올바른 이메일 형식이 아닙니다.(xxxxx@xxx.xxx)</string>
+    <string name="invalid_phone_number_length_error">전화번호를 다시 확인해주세요</string>
 
     <string name="human_resources_department">인사부</string>
     <string name="public_relations_department">홍보부</string>
