Design : 연락처 추가 다이얼로그 레이아웃 수정
1) 알람 설정 쪽 레이아웃에 패딩 1dp

2) 알람 선택 텍스트를 strings.xml로 추출

3) 알람 설정 쪽 레이아웃의 shape 파일에서 두께를 더 얇게 함

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,10 @@
     <string name="sales_department">영업부</string>
 
     <string name="department_count">(%d)</string>
+    
+    <string name="alarm_time_off">OFF</string>
+    <string name="alarm_time_five_seconds">5초 뒤</string>
+    <string name="alarm_time_five_minutes">5분 뒤</string>
+    <string name="alarm_time_ten_minutes">10분 뒤</string>
+    <string name="alarm_time_thirty_minutes">30분 뒤</string>
 </resources>
